--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess-number</title>
-    <link rel="stylesheet" href="number.css">          
+    <link rel="stylesheet" href="style.css">          
 </head>
 <body>
     <body background-image="#"></body>
@@ -17,6 +17,6 @@
         <button id="submit" >Submit</button>
         <p id="message"></p>
     </div>
-    <script src="number.js"></script>
+    <script src="style.js"></script>
 </body>
 </html>
